# frama-clang

./: .LICENSE  .depend  .gitignore  .gitlab-ci.yml  .headache_config.txt  ACSLCodeAnnotation.cpp  ACSLCodeAnnotation.h  ACSLComment.cpp  ACSLComment.h  ACSLComponent.cpp  ACSLComponent.h  ACSLFunctionContract.cpp  ACSLFunctionContract.h  ACSLGlobalAnnotation.cpp  ACSLGlobalAnnotation.h  ACSLLexer.cpp  ACSLLexer.h  ACSLLogicType.cpp  ACSLLogicType.h  ACSLLoopAnnotation.cpp  ACSLLoopAnnotation.h  ACSLParser.cpp  ACSLParser.h  ACSLStatementAnnotation.cpp  ACSLStatementAnnotation.h  ACSLTermOrPredicate.cpp  ACSLTermOrPredicate.h  ACSLToken.cpp  ACSLToken.h  AnnotationComment.h  Ast.org  CMakeLists.txt  ClangVisitor.cpp  ClangVisitor.h  Clang_utils.cpp  Clang_utils.h  DescentParse.cpp  DescentParse.h  DescentParse.template  Documentation_framaCIRGen.docx  (+51 more)
doc/support/: MakeLaTeXModern
doc/userman/: .gitignore  Makefile  biblio.bib  changes.tex  description.tex  eacslversion.tex  fclangversion.tex  frama-c-book.cls  grammar.tex  introduction.tex  limitations.tex  macros.tex  main.tex  preprocessing.tex  version.tex
nix/: default.nix  frama-ci.nix  frama-ci.sh
share/libc++/: __fc_define_char_traits_char  __fc_define_fpos  __fc_define_ios_base_seekdir  __fc_define_mbstate_t  __fc_define_streamoff  __fc_define_streampos  __fc_define_streamsize  algorithm  array  atomic  bitset  cassert  cerrno  climits  clocale  cstdarg  cstdbool  cstddef  cstdint  cstdio  cstdlib  cstring  ctime  cwchar  cxx_builtin.cc  cxxabi.h  exception  functional  initializer_list  ios  iosfwd  iostream  istream  iterator  locale  memory  new  ostream  ratio  stdexcepts  (+6 more)
tests/: Point2.cpp  test_config
tests/basic/: aggregate.cpp  anonymous_struct.cpp  array_2d_1987.cpp  array_field.cc  asm.cc  assign_lval.cpp  bitfields.cc  brace_or_equal_initializer.cpp  c_link.cc  cast.cc  constant.cpp  decayed_type.cpp  default_args.cc  delete_all_kind.cpp  delete_free_warn_1946.cpp  empty_arg_list_bts1506.cpp  empty_fun.cc  enum.cc  enum_neg_const.cpp  expr_paren_in_case.cpp  extern.cc  extern_static_const.cpp  forWithSimpleDecl.cpp  forward.cc  fun_call_lval_bts1542.cpp  gnu_body.cpp  incomplete_array_bts1746.cpp  incomplete_type.cpp  init.cc  is_trivial_1967.cpp  lambda.cpp  lambda_generic.c  lambda_generic.cpp  lambda_generic2.cpp  method_translation_order_2064.cpp  namespace.cc  nested_struct_extern_c.cpp  new.cpp  new_all_kind.cpp  new_array.cpp  (+45 more)
tests/bts/: acsl_error_msg_1964.cpp  array_init_1986.cpp  assigns_class_2074.cpp  bitwise_acsl_1991.cpp  boolean_values_1658.cpp  catch_decl_acsl_2071.cpp  catch_superclass_2051.cpp  constructor_contract_2003.cpp  constructor_precond_2014.cpp  contract_2034.cpp  contract_typedef_1805.cpp  copy_elision_2022.cpp  custom_conversion_1756.cpp  cxx_initializer_1743.cpp  decl_def_predicate_1688.cpp  destructor_custom_1738.cpp  destructor_custom_1961.cpp  do_switch_1994.cpp  dynamic_cast_2076.cpp  dynamic_cast_rte_1680.cpp  empty_class_1753.cpp  empty_class_1951.cpp  empty_throw_2045.cpp  enum_acsl_1982.cpp  exn_contracts_2046.cpp  extern_c_struct_64.cpp  extern_c_typedef_1965.cpp  feature_wish_static_ACSL_1944.cpp  fixed_acsl_quant_parsing_2069.cpp  fixed_addrof_acsl_2055.cpp  fixed_allocates_2062.cpp  fixed_arrow_equal_ACSL_1958.cpp  fixed_arrow_operator_2025.cpp  fixed_at_logic_label_2066.cpp  fixed_comparison_chain_2059.cpp  fixed_exception_1845.cpp  fixed_fc_builtin_size_t_1953.cpp  fixed_from_1757.cpp  fixed_integral_conversion_acsl_1902.cpp  fixed_named_predicate_2010.cpp  (+67 more)
tests/bugs/: issue11.cpp  issue20.cpp  issue23.cpp  issue24.cpp  issue2564.cpp  issue26-typeid.cpp  issue27-pred.cpp  logiccast.cpp  structbug.cpp  structbug2.cpp  term.cpp  test_config  typeconvert.cpp
tests/class/: array_init.cpp  array_object_bts1739.cpp  cast_op.cc  class_global.cc  cleanups.cc  constr.cc  default_arg.cc  default_const_bts1527.cpp  destructor_custom_2004.cpp  diamond_inheritance.cc  empty_class_bts1547.cpp  explicit_destructor_bts1528.cpp  heritage.cc.notest  inheritance_out_def.cpp  loop_local_var_bts1521.cpp  multiple_inheritance.cc  names.cc  namespace.cc  ostream_bts1752.cpp  overload_const_bts1541.cpp  rt_val.cc  simple_classe.cc  simple_private.cc  simple_virtual.cc  typedef_in_class_bts1540.cpp  used_before_decl_bts1526.cpp  virtual_for_shift.cc  virtual_for_shift2.cc  virtual_for_shift3.cc  virtual_inheritance.cc  virtual_inheritance_2077.cpp  virtual_method.cc
tests/da/: CLI-excerpt.ii  README  test_config
tests/demo/: Point2.cpp  simpleclass.cpp
tests/examples/: classscope.cpp  classscope1.cpp  classscopeI.cpp  classscopeI1.cpp  classscopeIS1.cpp  namespaces.cpp  pred.c  term.c
tests/exn/: all_exn.cpp  exn_typedef.cpp  inheritance_catch.cpp  integer_exn.cpp  nested_catch.cpp  simple_exn.cpp  unsigned_exn.cpp
tests/old/: Stack.cpp  Stack_modif.cpp  alloc.cc  alloc_value.cc  annot_gen_multi_contract_bts1611.cpp  anonymous_union.cc  applying_labels_bts1609.cpp  basic_inheritance.cc  class_inherits.cc  compound_lit.cc  def_out_of_class_bts1606.cpp  default_initialization.cpp  double_spec.cpp  dynamic_cast.cc  fptr.cc  fwd_decl.cc  ghost.cc  ghost_field.cc  ignored_annotation_bts1616.cpp  inheritance.cc  invariants.cc  local_var.cc  logic_label.cc  minmax.cc  multiple_dynamic_cast.cc  multiple_virtual_cast.cc  multiple_virtual_method.cc  new_array_bts1608.cpp  new_bts1569.cpp  packed.cc  pointer_parsing_bts1615.cpp  predicate_bts1808.cpp  ptr_arith_bts1627.cc  recv.cc  simple_inheritance.cc  template.cc  template_assigns_bts1707.cpp  template_instantiation_bts1706.cpp  tmp_in_class_bts1547.cpp  typedef_in_template_bts1552.cpp  (+3 more)
tests/pp/: allocates.cpp  assigns.cpp  badbackslash.cpp  baddirective.cpp  baddirective2.cpp  builtin_except.cc  builtins.cpp  comment.cpp  complete.cpp  declbug.cpp  define.cpp  define2.cpp  doxygen.cpp  empty.cpp  (+31 more)
(+505 files in other folders)
